Update config, add link, address filters

--- a/config/collectd.conf
+++ b/config/collectd.conf
@@ -15,5 +15,13 @@ LoadPlugin python
     Links true
     Addresses false
     Memory false
+    <LinkInclude>
+      pattern "linkname1"
+      pattern "linkname2"
+    </LinkInclude>
+    <AddressInclude>
+      pattern "address1"
+      pattern "address2"
+    </AddressInclude>
   </Module>
 </Plugin>
